spring api: toList